<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/two"
        android:gravity="center"
        android:padding="@dimen/two"
        android:textSize="@dimen/item_title"
        tools:text="0 item(s) in Cart." />

    <ScrollView
        android:id="@+id/scrollview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/checkout_button"
        android:layout_below="@id/item_count">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/checkout_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>
    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/checkout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/two"
        android:text="@string/checkout" />
</RelativeLayout>
