<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/activity_main_alerts_menu_item"
        android:title="@string/view_cart"
        app:actionLayout="@layout/view_alertsbadge"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
</menu>